--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-actions": "^2.6.1"
   },
@@ -16,5 +16,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
